Minor Fixes for Firebase and MDX

--- a/data/blog/como-un-stream-de-videojuegos-me-llevo-a-hacer-una-empresa-en-un-sotano-bien-feo.mdx
+++ b/data/blog/como-un-stream-de-videojuegos-me-llevo-a-hacer-una-empresa-en-un-sotano-bien-feo.mdx
@@ -91,7 +91,7 @@ Así es que en parte por culpa de Adriano ando metido en todo esto que ha llevad
 Si llegaste hasta acá te invito todos los miércoles a las 8:30pm a que entres en [facebook.com/thenewgameorder](http://facebook.com/thenewgameorder) a cotorrear al stream, se supone que hablamos de videojuegos pero terminamos hablando de mazapanes, de los tazos de pacman y a veces hasta la gente se pone de acuerdo para hacer donaciones para pintarle la barba a Bart de color rosa. Lo chévere acá es que nos divertimos todos juntos, es cómo estar en una videollamada con tus amigos.
 
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9hEtOjnhx7o?start=399" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9hEtOjnhx7o?start=399" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
 <br/>
 
 También tenemos un podcast semanal donde ahí solo hablamos de videojuegos.
