--- a/data/blog/mi-experiencia-creando-una-comunidad-en-discord-ah-y-un-bot.mdx
+++ b/data/blog/mi-experiencia-creando-una-comunidad-en-discord-ah-y-un-bot.mdx
@@ -20,7 +20,7 @@ A penas justo en estos días he tenido un poco más de respiro para sentarme a e
 
 Discord es esta aplicación donde tienes un conjunto de chats de texto y voz. Tiene ya un rato que se ha popularizado principalmente entre gamers, por que es bien fácil entrar con tus amigos a un chat de voz mientras juegas retas de algún videojuego. Tan así, que fue la la app social más descargada en iOS hace unos días.
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">number 1 “social networking app” on iOS today in the US...for the first time ever! <br/><br/>thank you everyone for getting us here 🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳 <a href="https://t.co/j19g1dFe6E">pic.twitter.com/j19g1dFe6E</a></p>&mdash; Discord (@discord) <a href="https://twitter.com/discord/status/1307067423884013570?ref_src=twsrc%5Etfw">September 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet"><p lang="en" dir="ltr">number 1 “social networking app” on iOS today in the US...for the first time ever! <br/><br/>thank you everyone for getting us here 🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳🎉🥳 <a href="https://t.co/j19g1dFe6E">pic.twitter.com/j19g1dFe6E</a></p>&mdash; Discord (@discord) <a href="https://twitter.com/discord/status/1307067423884013570?ref_src=twsrc%5Etfw">September 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 
 Poco a poco se ha hecho una comunidad bastante chevere y en este caso la comunidad de TNGO, se ha ido armando despacito con gente que nos conocía de las transmisiones que hacemos cada miércoles o gente random que llegó en algún momento. Algo que me gusta mucho es que la mismas personas le han dado forma al servidor.
 
@@ -32,7 +32,7 @@ Otro canal que inició con mucha fuerza, fue el canal de #tngo-maincra. Monté c
 
 Debo de decir que no sabía nada de minecraft antes de montar el servidor y vaya que me estaba perdiendo de mucho. Tan así que hasta el grito de Independencia dimos el pasado 16 de septiembre 🇲🇽.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MrFjuXWv4_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MrFjuXWv4_k" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
 
 Así como surgió el canal de minecraft, este dio pasó a otros juegos como among us, fall guys y world of warcraft.
 
