--- a/data/blog/algo-que-creo-que-todos-los-artistas-deberian-de-leer.mdx
+++ b/data/blog/algo-que-creo-que-todos-los-artistas-deberian-de-leer.mdx
@@ -61,7 +61,7 @@ Hoy en día esas dos canciones que produje desde un audio de whatsapp  al día d
 
 <SoundCloudPlayer embedUrl="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/826463113%3Fsecret_token%3Ds-QFJDIg4FvKS&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" />
 <br/>
-<iframe src="https://open.spotify.com/embed/playlist/46cMJ5nRCPfdpKMrWfODjl" width="674" height="220" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/playlist/46cMJ5nRCPfdpKMrWfODjl" width="674" height="220" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 <br/>
 
 La cosa es que un productor puede cobrar de distintas maneras, pero ese % de participación es de lo más común, básicamente el productor está ayudando a componer y que todo quede lo mejor posible antes de grabar.
