Fix Youtube videos for mobile

--- a/data/blog/mi-experiencia-creando-una-comunidad-en-discord-ah-y-un-bot.mdx
+++ b/data/blog/mi-experiencia-creando-una-comunidad-en-discord-ah-y-un-bot.mdx
@@ -32,7 +32,7 @@ Otro canal que inició con mucha fuerza, fue el canal de #tngo-maincra. Monté c
 
 Debo de decir que no sabía nada de minecraft antes de montar el servidor y vaya que me estaba perdiendo de mucho. Tan así que hasta el grito de Independencia dimos el pasado 16 de septiembre 🇲🇽.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MrFjuXWv4_k" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+<BlogVideo youtubeId="v4tjKugrtr8"/>
 
 Así como surgió el canal de minecraft, este dio pasó a otros juegos como among us, fall guys y world of warcraft.
 
