Some typos fixed

--- a/data/blog/descubri-el-netflix-japo.mdx
+++ b/data/blog/descubri-el-netflix-japo.mdx
@@ -14,16 +14,16 @@ image: '/static/images/blog/descubri-el-netflix-japo/banner.jpg'
 />
 
 Para estrenar el rediseño del magioblog quiero compartirte lo que estuve mirando en el mes de enero. No siempre veo 
-contenido asiatico pero si debo de admitir que el monochinisimo ha predominado estos últimos meses y todo ha sido culpa del catalogo japones de netflix.
+contenido asiático pero si debo de admitir que el monochinisimo ha predominado estos últimos meses y todo ha sido culpa del catalogo japonés de netflix.
 
-Mayormente hay mucho anime que ver, pero también hay algunos live actions, doramas e incluso películas que puedes mirar.
-Igual te pongo el trailer de cada serie junto con su descripción corta por si te sirve minimo para dar una checada rápida y tener algo que ver. 
+Mayormente hay mucho anime que ver, pero también hay algunos live actions, doramas e incluso películas que vale la pena checar.
+Igual te pongo el trailer de cada serie junto con su descripción corta, por si te sirve minimo para dar una checada rápida y tener algo que ver. 
 
 ## Erased (2017)
 
 Esta serie viene al 2x1, puedes encontrar en netflix el anime y el live action.
 Trata de un chico que puede retroceder el tiempo involuntariamente unos cuantos segundos, justo antes de que suceda algún evento desafortunado.
-Es un sci-fi con drama japones que disfruté muchisimo, super bien hecho y que te atrapa todo el tiempo. 
+Es un sci-fi con drama japonés que disfruté muchisimo, super bien hecho y que te atrapa todo el tiempo. 
 Sin duda mi recomendación estrella de este articulo.
 
 <BlogVideo youtubeId="dHnQtimWrQo"/>
