--- a/data/blog/te-explico-que-son-los-nft.mdx
+++ b/data/blog/te-explico-que-son-los-nft.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Te explico que son los NFTs'
+title: 'Te explico que son los NFTs 🎨'
 publishedAt: '2021-03-23'
 summary: 'Ahora que ha estado a todo lo que da el mame de los NFTs, te explico todo lo que tienes que saber del tema..'
 image: '/static/images/blog/te-explico-que-son-los-nft/banner.jpg'
