Link in bitcoin article to nfts

--- a/data/blog/te-explico-que-es-el-bitcoin.mdx
+++ b/data/blog/te-explico-que-es-el-bitcoin.mdx
@@ -113,6 +113,8 @@ Si aun así decides querer comprar unos cuantos centavos de bitcoin para experim
 Personalmente pienso que en un futuro tener dinero digital descentralizado, como el bitcoin va a ser algo muy común. 
 Y que va a permitir a la gente y negocios poder hacer transacciones sin tener que depender de bancos o gobiernos. Espero con ansias el día en que pueda ir al oxxo a comprar unas papitas y pagarlas con bitcoin. 
 
+También se está desatando otro mundo gracias al blockchain. El de los NFT's o_o, los cuales explico [acá](https://magiobus.com/blog/te-explico-que-son-los-nft)
+
 Pero bueno, gracias por leerme. Espero que te haya gustado este post y que haya servido para dar un panorama general de que es el bitcoin y cómo entrarle. Si tienes alguna duda siempre puedes encontrarme en mis redes sociales como [@magiobus](http://instagram.com/magiobus) o [mandarme un tweet](https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw&screen_name=magiobus&tw_p=tweetbutton).
 
 También puedes suscribirte a este blog en el recuadro de abajo y te mando luego los posts que voy escribiendo a tu correo
